Add transcion detail
